# thought_crawl

./: .gitignore  README.md  nohup.out  pyproject.toml
core/: analysis_utils.py  crawler.py  crawler_config.py  generation_utils.py  llm_utils.py  model_utils.py  project_config.py  ranking.py  ranking_eval.py  safety_topic_ranker_matcher.py  steering_utils.py  tokenization_utils.py  topic_queue.py  wordcloud_utils.py
exp/: analyze_crawl.py  evaluate_crawler.py  eyeball_raw.py  eyeball_raw_topics.py  gt_evaluation.py  only_test_refusal.py  plot_crawl_stats.py  rank_elo.py  run_crawler.py  run_ranking.py  safety_topic_matcher.py  steering_exp.py  summary_table_across_runs.py
scripts/: analysis_run.sh  claude_run_crawler.sh  continue_ds70b_run_crawler.sh  continue_meta70b_run_crawler.sh  continue_pp70b_run_crawler.sh  ds0528_8b_run_crawler.sh  ds70b_run_crawler.sh  ds8b_run_crawler.sh  gemma3-12b_run_crawler.sh  grok_run_crawler.sh  meta70b_run_crawler.sh  meta8b_run_crawler.sh  mistral_run.sh  pp70b_run_crawler.sh  run_crawler.sh  run_crawler_custom_llama.sh  run_safety_matcher.sh  run_sft_dataset_generator.sh  tulu70b_run_crawler.sh  tulu8b_assistant_prefix_run_crawler.sh  tulu8b_userall_run_crawler.sh  tulu8b_usersuffix_run_crawler.sh
tests/: test_crawler.py  test_generation_utils.py
