[tool.poetry]
name = "thought_crawl"
version = "0.1.0"
description = ""
authors = ["Can Rager <canrager@gmail.com>"]
packages = [{include = "exp"}, {include = "core"}]

[tool.poetry.dependencies]
python = ">=3.11.9,<3.13"
torch = "^2.6.0"
transformers = "^4.48.2"
accelerate = "^1.3.0"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
anthropic = "^0.45.2"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
sentencepiece = "^0.2.0"
spacy = "^3.8.4"
sacremoses = "^0.1.1"
psutil = "^7.0.0"
pynvml = "^12.0.0"
numpy = "^2.2.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"