[tool.poetry]
name = "thought_crawl"
version = "0.1.0"
description = ""
authors = ["Anonymous"]
packages = [{include = "exp"}, {include = "core"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
torch = "^2.7.0"
transformers = "^4.52.4"
accelerate = "^1.3.0"
safetensors = "^0.4.3"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
anthropic = "^0.45.2"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
sentencepiece = "^0.2.0"
spacy = "^3.8.4"
sacremoses = "^0.1.1"
numpy = "<2.0.0"
together = "^1.4.1"
pytest = "^8.3.4"
nnsight = "^0.4.3"
openai = "^1.65.2"
wordcloud = "^1.9.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"